--- a/.github/workflows/data_fetcher.yml
+++ b/.github/workflows/data_fetcher.yml
@@ -1,5 +1,9 @@
 name: Data Fetcher Pipeline
 
+# トークンに書き込み権限を付与
+permissions:
+  contents: write
+
 on:
   push:
     branches: [ main ]
@@ -26,7 +30,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        # ディレクトリ内容を確認
+        ls -la
+        # 存在確認
+        if [ -f "requirements.txt" ]; then
+          pip install -r requirements.txt
+        else
+          # ファイルが無い場合は直接インストール
+          pip install pandas requests pytest
+        fi
     
     - name: Run tests
       run: |
@@ -47,7 +59,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        # ディレクトリ内容を確認
+        ls -la
+        # 存在確認
+        if [ -f "requirements.txt" ]; then
+          pip install -r requirements.txt
+        else
+          # ファイルが無い場合は直接インストール
+          pip install pandas requests pytest
+        fi
     
     - name: Fetch data
       run: |
@@ -58,4 +78,11 @@ jobs:
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
         git add data/sample_name.json
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update data $(date +'%Y-%m-%d')" && git push)
+        # 変更があった場合のみコミット
+        if git diff --staged --quiet; then
+          echo "No changes to commit"
+        else
+          git commit -m "Update data $(date +'%Y-%m-%d')"
+          # PAT（Personal Access Token）を使用してプッシュ
+          git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" HEAD:${GITHUB_REF#refs/heads/}
+        fi
